upgrade to Java 16 and latest version of spring boot (#2)
* adds pom at parent level for depenency updates

* adds all modules

* fix issues with pom

* polish script

* Increase Java version to 15

* temporarily removes failed modules

* upgrade to latest version and fix issues

* fix Test case

* temporarily removes module

* temporarily removes module

* temporarily removes module

* fix Test case

* temporarily removes module

* temporarily removes module

* temporarily removes module

* fix Test case

* fix Test case

* fix Test case

* fix Test case

* run using java 11 & 16

* fix Test case

* fix Test case

* fix Test case

* fix Test case

* fix Test case